--- a/ngservice.yaml
+++ b/ngservice.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: dev
-  namespace: my-nginx-namespace # Specify the target namespace
+  name: nginx-service
+  namespace: dev # Specify the target namespace
 spec:
   selector:
     app: nginx
