--- a/NginxDeploy.yaml
+++ b/NginxDeploy.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
-  namespace: dev # Specify the target namespace
+  # namespace: dev # Specify the target namespace
 spec:
   replicas: 1 # Number of NGINX pods
   selector:
